--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ main {
 @media screen and (max-width: 768px) {
   main {
     width: 100%;
+    float: none;
   }
 
   .step-box {
@@ -72,14 +73,22 @@ main {
   	height: auto;
   	float: none;
   	text-align: left;
-  	margin: 20px;
-  }
-.step-box:last-child {
-	margin-right: auto;
+  	margin: 0 auto;
+
   }
 
+  .step-box:nth-child(2) {
+  	margin: 20px auto;
+  }
+
+  .step-box:last-child {
+  	margin: auto;
+  }
+
+
+
   .step-img1 {
-  	width: 100%;
+  	width: auto;
     height: 200px;
   }
 
